# EmployeeSalaryProgram

./: CMakeLists.txt  README.md  headers.h  main.c
models/: employee.h  employeeSalary.h
services/: close.c  close.h  fileLoader.c  fileLoader.h  lookup.c  lookup.h  salary.c  salary.h  validFileName.c  validFileName.h
txtFiles/: EmpSal2022.txt  Employee.txt
